# GroupContextNetworking

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: main.yml
example/: websocketExample.html
src/: GroupManager.cpp  GroupManager.h  MainInterface.cpp  MainInterface.h
src/Models/: Group.cpp  Group.h  GroupManager.cpp  GroupManager.h  MessageType.h  Socket.h  User.cpp  User.h  UserData.h
src/Networking/: Socket.cpp  Socket.h  WebSocket.cpp  WebSocket.h
src/Utils/: UUID.h
test/: CMakeLists.txt
test/Models/: GroupTest.cpp
test/tests/: MainInterfaceTest.cpp
test/tests/Models/: GroupManagerTest.cpp  GroupTest.cpp
